Module-2/Section-2/gateway-api.yaml
# kubectl create secret tls tomcat-webapp-ingress --cert=STAR_singhritesh85_com.crt --key=mykey.key -n tomcat --context=arn:aws:eks:us-east-2:027330342406:cluster/eks-demo-cluster-dev
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tomcat-webapp-gateway
  namespace: tomcat
spec:
  gatewayClassName: nginx # e.g., "nginx"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "3tierwebapp.singhritesh85.com"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "3tierwebapp.singhritesh85.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: tomcat-webapp-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tomcat-webapp-http-to-https-redirect
  namespace: tomcat
spec:
  parentRefs:
  - name: tomcat-webapp-gateway
    namespace: tomcat
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301 # Use 301 for permanent redirect
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tomcat-webapp-route-https
  namespace: tomcat
spec:
  parentRefs:
  - name: tomcat-webapp-gateway
    namespace: tomcat
    sectionName: https
  hostnames:
  - "3tierwebapp.singhritesh85.com"
  rules:
  - backendRefs:
    - name: tomcat-folo # Name of the Service created by the Helm chart
      port: 80
